--- a/test.css
+++ b/test.css
@@ -865,15 +865,13 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
 
  .mie_ride_benifits{
         width: 100%;
-        box-sizing: border-box;
-        padding: 70px 0px;
         
         }
     
    .mie_ride_benifits .mie_ride_benifits_title {
           padding: 20px 0px;
-    
-        }
+     }
+
    .mie_ride_benifits .mie_ride_benifits_title h4{
           letter-spacing: 2px;
            font-weight:300;  
@@ -901,7 +899,7 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
       }
     
  .mie_ride_benifits .benifits_row_one .user_text_section{
-        min-height: 150px;
+        min-height: 100px;
         text-align: center;
       }
     
@@ -974,6 +972,35 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
     height: 35px;
     font-weight: bold;
     }
+
+    .mie_ride_benifits .benifits_row_colum_main  .benifits_row_colum_up_2 .number_icon_title_up{
+        height: 80px;
+        display: flex;
+        justify-content: start;
+        align-items: end;
+        padding: 0px 5px;
+       
+    }
+    .mie_ride_benifits .benifits_row_one .benifits_row_colum .number_icon_title_up p{
+        color: #000;
+        text-align: start;
+       text-transform: uppercase;
+          font-weight: 600;
+          line-height: 18px;
+          font-size: 13px;
+      }
+      .mie_ride_benifits .benifits_row_one  .benifits_row_colum_up_2{
+        position: relative;
+        z-index: 2;
+        margin-top: -80px;
+        margin-left: 8px;
+        width: 95%;
+        min-height: 100px;
+          transform: rotate(10deg);
+          box-shadow: 0px 5px 6px 2px rgba(0,0,0,0.1);  
+        
+      }
+      
     
   .mie_ride_benifits .benifits_row_one .benifits_row_colum .number_icon_title{
         height: 100px;
@@ -983,6 +1010,8 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
         padding: 0px 5px;
         
     }
+
+    
   .mie_ride_benifits .benifits_row_one .benifits_row_colum .number_icon_title p{
       color: #000;
       text-align: start;
@@ -1014,9 +1043,9 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
   .mie_ride_benifits .benifits_row_one  .benifits_row_colum_bellow_2{
       position: relative;
       z-index: 1;
-      min-height: 125px;
+      min-height: 120px;
       transform: rotate(-2deg);
-      width: 90%;
+      width: 95%;
       background-color: #0b0b0b;
       
     }
@@ -1038,18 +1067,7 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
       width: 20px;
      }
     
-  .mie_ride_benifits .benifits_row_one  .benifits_row_colum_up_2{
-      position: relative;
-      z-index: 2;
-      margin-top: -100px;
-      margin-left: 8px;
-      width: 90%;
-      min-height: 133px;
-        transform: rotate(10deg);
-        box-shadow: 0px 5px 6px 2px rgba(0,0,0,0.1);  
-      
-    }
-    
+  
     
   .mie_ride_benifits .benifits_row_one .benifits_row_colum_driver {
       background-color: rgb(255, 198, 29);
@@ -1078,9 +1096,9 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
   .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_bellow_2{
       position: relative;
       z-index: 1;
-      min-height: 125px;
+      min-height: 120px;
       transform: rotate(-2deg);
-      width: 90%;
+      width: 95%;
       background-color: #0b0b0b;
     
     }
@@ -1106,15 +1124,30 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
   .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_up_2{
       position: relative;
       z-index: 2;
-      margin-top: -100px;
+      margin-top: -80px;
       margin-left: 8px;
-      width: 90%;
-      min-height: 133px;
+      width: 95%;
+      min-height: 100px;
       transform: rotate(10deg);
       box-shadow: 0px 5px 6px 2px rgba(0, 0, 0, 0.1);
     
     }
+    .mie_ride_benifits .benifits_row_one .benifits_row_colum_driver_up_2 .number_icon_title_up{
+      height: 90px;
+    display: flex;
+    justify-content: start;
+    align-items: end;
+    padding: 0px 5px;
+      }
     
+    .mie_ride_benifits .benifits_row_one .benifits_row_colum_driver_up_2 .number_icon_title_up p{
+        color: #000;
+        text-align: start;
+       text-transform: uppercase;
+        font-weight: 600;
+        line-height: 16px;
+        font-size: 13px;
+      }
     
   .mie_ride_benifits .benifits_row_one_2{
       margin-top: 20px;
