--- a/test.css
+++ b/test.css
@@ -995,6 +995,7 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
         justify-content: start;
         align-items: end;
         padding: 0px 5px;
+        font-family: 'NexaBold';
        
     }
     .mie_ride_benifits .benifits_row_one .benifits_row_colum .number_icon_title_up p{
@@ -1150,11 +1151,12 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
     
     }
     .mie_ride_benifits .benifits_row_one .benifits_row_colum_driver_up_2 .number_icon_title_up{
-      height: 90px;
+      height: 80px;
     display: flex;
     justify-content: start;
     align-items: end;
     padding: 0px 5px;
+    font-family: 'NexaBold';
       }
     
     .mie_ride_benifits .benifits_row_one .benifits_row_colum_driver_up_2 .number_icon_title_up p{
@@ -1182,9 +1184,10 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
     
     @media screen and (max-width:991px) {
     
-      /* .mie_ride_benifits{
+      .mie_ride_benifits{
         height: 100%;
-      }  */
+        padding: 60px 0px;
+      } 
  .mie_ride_benifits .benifits_row_one_2{
         margin-top: 0px;
       }
