--- a/test.css
+++ b/test.css
@@ -1418,7 +1418,198 @@ box-shadow: 2px 3px 16px -10px rgba(66, 68, 90, 1);
     }
   
    
-      
+    
+    .mie_ride_advertise{
+      padding-top: 20px;
+    
+     }
+    
+     .mie_ride_advertise .iphone_details{
+       padding: 5px;
+     }
+     
+     .mie_ride_advertise .mie_ride_advertise_title h4{
+      font-size: 20px;
+      font-family: "NexaLight";
+      color: rgb(0, 0, 0);
+      text-transform: uppercase;
+      text-align: center;
+      letter-spacing: 5px;
+      margin-top: 10px;
+     
+     }
+     .mie_ride_advertise .advertise-main{
+      font-family: 'NexaBold';
+     }
+     .mie_ride_advertise .main_iphone{
+       padding: 10px;
+     
+     }
+     
+     .mie_ride_advertise .iphone_details .iphone_details_below{
+       position: relative;
+      background-color: rgb(255, 198, 29);
+      height: 160px;
+      width: 100%;
+      z-index: 1;
+      border-radius: 10px;
+      margin-top: 20px;
+     }
+     .mie_ride_advertise .iphone_details .iphone_details_up{
+       position: relative;
+      background-color:#000000;
+      height: 160px;
+      width: 100%;
+      z-index: 2;
+      border-radius: 10px;
+      margin-top: -170px;
+      margin-left: 10px;
+     }
+     
+     .mie_ride_advertise  .left_text_box{
+       width: 100%;
+       display: flex;
+       justify-content: center;
+     }
+     .mie_ride_advertise  .left_text_box .down_box{
+       position: relative;
+       background-color:#000000;
+       z-index: 1;
+       border-radius: 10px;
+       height: 250px;
+       margin-top: 180px;
+       right: 0;
+     
+     }
+     
+     .mie_ride_advertise .left_text_box .up_box{
+       position: relative;
+       background-color: rgb(255, 198, 29);
+       z-index: 2;
+       border-radius: 10px;
+       height: 250px;
+      margin-top:-260px;
+      margin-left: 10px;
+      padding: 10px;
+      right: 0;
+     
+     }
+     .mie_ride_advertise .left_text_box .up_box p{
+       color: #000;
+       font-weight: 300;
+      font-size: 13px;
+     }
+     .mie_ride_advertise .left_text_box .up_box .up_box_hand{
+       position: absolute;
+       right: 10px;
+       bottom: -10px;
+     }
+     
+     .mie_ride_advertise .left_text_box .up_box p {
+      padding: 10px;
+      font-size: 13px;
+      text-align: center;
+     }
+     .mie_ride_advertise .iphone_details .hand_icon img{
+       position: relative;
+       margin-top: -12px;
+       z-index: 4;width: 20px;
+       height: 20px;
+       margin-right:10px;
+     }
+     
+     .mie_ride_advertise .iphone_details .hand_icon .hand_2{
+       top: -5px;
+       transform: rotate(-35deg);
+     }
+     .mie_ride_advertise .iphone_details .text_up b{
+     color: #fff;
+     font-size: 15px;
+     text-transform: uppercase;
+     font-weight:bold;
+     
+     }
+     .mie_ride_advertise .iphone_details .text_up p{
+       padding-top: 5px;
+       color: rgb(255, 198, 29);
+       margin-top: 30px;
+       font-size: 14px;
+       }
+     .mie_ride_advertise .iphone_details .text_up{
+       position: relative;
+       margin-top: -15px;
+       z-index: 2;
+       padding: 5px;
+       line-height: 18px;
+     }
+     .mie_ride_advertise  .mie_ride_advertise_bottom{
+        padding: 5px;
+        font-size: 16px;
+     }
+     .mie_ride_advertise  .mie_ride_advertise_bottom p{  
+      font-size: 15px;
+   }
+     
+     @media screen and (max-width:991px) {
+
+      .mie_ride_advertise{
+        height: 100%;
+      }
+       .mie_ride_advertise .iphone_details_colum{
+       flex-direction: column-reverse;
+       }
+       .mie_ride_advertise .main_iphone{
+         padding: 0px;
+       
+       }
+       .mie_ride_advertise .iphone_details .iphone_details_below {
+         height: 100px;
+         width: 100%;
+         margin-top: 15px;
+     }
+     
+     .mie_ride_advertise .iphone_details .iphone_details_up {
+       height: 100px;
+       width: 100%;
+       margin-top: -95px;
+       margin-left: 9px;
+     }
+     .mie_ride_advertise .iphone_details .text_up{
+       padding: 5px;
+       margin-top: -15px;
+     }
+     .mie_ride_advertise .iphone_details .text_up {
+       
+       line-height: 10px;
+     }
+     .mie_ride_advertise .iphone_details .text_up b{
+       color: #fff;
+       letter-spacing: 0px;
+       font-size: 10px;
+       padding: 2px;
+       
+       }
+       .mie_ride_advertise .iphone_details .text_up p{
+         
+         color: rgb(255, 198, 29);
+         font-size: 10px;
+         margin-top: 10px;
+         }
+         .mie_ride_advertise .left_text_box .down_box{
+           margin-top:20px;
+         }
+         .mie_ride_advertise .left_text_box .up_box p{
+           font-size: 13px;
+         }
+         .mie_ride_advertise .mie_ride_advertise_bottom{
+          padding: 10px 0px;
+         }
+         .mie_ride_advertise .mie_ride_advertise_bottom p {
+          font-size: 10px;
+      }
+     }
+     
+
 
 #contact {
     background: #333;
